force-app/main/default/objects/Artl_RouterMatrix__mdt/Artl_RouterMatrix__mdt.object-meta.xml
<CustomObject>
    <label>Artl_RouterMatrix</label>
    <pluralLabel>Artl_RouterMatrixs</pluralLabel>
</CustomObject>