force-app/main/default/objects/Artl_RouterMatrix__mdt/fields/Is_NSH__c.field-meta.xml
<CustomField>
    <fullName>Is_NSH__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is NSH</label>
    <type>Checkbox</type>
</CustomField>