force-app/main/default/objects/Artl_RouterMatrix__mdt/fields/Item_Code__c.field-meta.xml
<CustomField>
    <fullName>Item_Code__c</fullName>
    <label>Item Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>