force-app/main/default/objects/Artl_RouterMatrix__mdt/fields/Max_Bandwidth__c.field-meta.xml
<CustomField>
    <fullName>Max_Bandwidth__c</fullName>
    <label>Max Bandwidth</label>
    <length>10</length>
    <type>Text</type>
</CustomField>