force-app/main/default/objects/Artl_RouterMatrix__mdt/fields/Min_Bandwidth__c.field-meta.xml
<CustomField>
    <fullName>Min_Bandwidth__c</fullName>
    <label>Min Bandwidth</label>
    <length>10</length>
    <type>Text</type>
</CustomField>